# embedding_and_llm_initial_experiments

./: LICENSE.MD  README.md  old_pyproject.toml  precommit_actions.yaml  pyproject.toml
data/: ~$by_dick_2.docx
data/documents/: moby_dick_2.docx
data/prompt_templates/: default_prompts.yml
doc_db/: chroma.sqlite3
scripts/: environment_setup.ps1
src/config_handling/: prompt_template_loader.py
src/create_vector_data/: calculated_document_embeddings.ipynb  calculated_document_embeddings.py  some_resources_notes.txt
src/interface_for_search/: streamlit_rag_chat.py
src/query_answering/: local_llm_query_answer.py
